# tiny-kanban-v2

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_card_due_date.py
backend/src/tiny_kanban/: __init__.py  api.py  config.py  db.py  main.py  mcp_server.py  models.py  schemas.py  seed.py  service.py
backend/tests/: conftest.py  test_api_board.py  test_api_mutations.py  test_config.py  test_mcp.py  test_mcp_write.py  test_migrations.py  test_seed.py  test_service.py  test_service_mutations.py  test_static.py  test_versioning.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  actions.ts  api.test.ts  api.ts  config.ts  index.css  storage.test.ts  storage.ts  types.ts
frontend/src/components/: ArchiveView.tsx  Board.tsx  CardModal.tsx  LabelPill.tsx
src/: App.tsx  index.css  storage.ts  types.ts
src/components/: Board.tsx
