[project]
name = "tiny-kanban"
version = "0.1.0"
description = "Backend for Tiny-kanban v2: FastAPI + SQLAlchemy + SQLite"
authors = [
    { name = "Thomas BARBIER" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
